# mergequeue-github

./: .gitignore  Cargo.toml  LICENSE  README.md  h  logical-conflict.txt  out.son  out.yxy  requirements.txt
.config/: demo.toml  generator.toml  mq.toml
.github/workflows/: factory.yaml  housekeeping.yaml  main.yml  pr.yaml  pr_targets.yaml  release.yaml  trunk-check.yaml  upload_impacted_targets.yaml
.trunk/: trunk.yaml
bazel/alpha/: BUILD  alpha.txt  words.txt
bazel/bravo/: BUILD  bravo.txt  words.txt
bazel/charlie/: BUILD  charlie.txt  words.txt
bazel/delta/: BUILD  delta.txt  words.txt
bazel/echo/: BUILD  echo.txt
bazel/foxtrot/: BUILD  foxtrot.txt
bazel/golf/: BUILD  golf.txt
demo_workspace/target_1/files/: branch_for_demo_aeryfertea.txt  branch_for_demo_ahhjcjquuf.txt  branch_for_demo_amohlypzuw.txt  branch_for_demo_aopibmufuz.txt  branch_for_demo_arjdnxbjte.txt  branch_for_demo_azmdizjoji.txt  branch_for_demo_bgrnyayobk.txt  branch_for_demo_bskgennjsz.txt  branch_for_demo_btsalnupcu.txt  branch_for_demo_cfxlyjtfgt.txt  branch_for_demo_cjqquduoix.txt  branch_for_demo_crmbufecuz.txt  branch_for_demo_crwyikvgzg.txt  branch_for_demo_dtyjxgkpsu.txt  branch_for_demo_ehogtysnvg.txt  branch_for_demo_eprptxqvsi.txt  branch_for_demo_fcxmjpemhq.txt  branch_for_demo_fmoyjyochu.txt  (+35 more)
demo_workspace/target_2/: BUILD
demo_workspace/target_4/: BUILD
src/: clean_repo.py  cli.rs  config.rs  constants.py  demo_pr.py  edit.rs  fan_prs.py  github.rs  lib.rs  main.rs  process.rs  trunk.rs  utils.py
tests/: check.rs
toolchain/: defs.bzl
(+104 files in other folders)
