[package]
name = "generator"
version = "0.0.0"
authors = ["merge <merge@trunk.io>"]
license = "MIT"
description = "pull request generator"
readme = "README.md"
edition = "2021"

[lib]
name = "gen"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.64"
clap = { version = "4.0.8", features = ["derive"] }
env_logger = "0.9.1"
git2 = { version = "0.15", default-features = false }
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.6.0"
content_inspector = "0.2.4"
rayon = "1.5.1"
confique = "0.2.5"
serde = "1.0.197"
toml = "0.8.12"
ran = "2.0.1"
rand = "0.8.5"
